<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".TelaDeLogin">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="129dp"
        android:layout_height="55dp"
        android:fontFamily="@font/yrsa_light"
        android:text="@string/Study"
        android:textColor="#5B44F2"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="259dp"
        android:layout_height="87dp"
        android:backgroundTint="#8D7EF2"
        android:text="@string/acessar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#FFEBFD"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="false"
        android:text="@string/e_mail1"
        android:textColor="#5B44F2"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/personName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#FFEBFD"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="false"
        android:text="@string/senha1"
        android:textColor="#5B44F2"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="265dp"
        android:layout_height="29dp"
        android:text="@string/CriarConta"
        android:textColor="#5B44F2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:contentDescription="@string/Todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/books_64"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="151dp"
        android:layout_height="134dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        app:srcCompat="@drawable/avatar_profile_icon"
        tools:ignore="ContentDescription,HardcodedText" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="451dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944"
        app:srcCompat="@drawable/simplesmenteuma_linha"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck,VisualLintBounds" />

</android.support.constraint.ConstraintLayout>